# Data.Doublets.Gql

./: .editorconfig  .gitignore  .gitmodules  GraphQLHttpMiddlewareWithLogs.cs  Platform.Data.Doublets.Gql.sln  Platform.Data.Doublets.GraphQL.sln  README.md  Startup.cs
csharp/: index.json  (+5 more)
rust/: Cargo.toml
rust/doublets_gql_server/: Cargo.toml
rust/doublets_gql_server/src/: main.rs
rust/doublets_gql_server/src/model/: mod.rs
rust/src/: main.rs  store.rs
rust/src/model/: distinct.rs  iterator.rs  mod.rs
rust/src/model/enum_type/: can_select_column.rs  links_constraint.rs  links_select_column.rs  links_update_column.rs  mod.rs  mp_constraint.rs  mp_select_column.rs  mp_update_column.rs  numbers_constraint.rs  numbers_select_column.rs  numbers_update_column.rs  objects_constraint.rs  objects_select_column.rs  objects_update_column.rs  order_by.rs  selectors_select_column.rs  strings_constraint.rs  strings_select_column.rs  strings_update_column.rs
rust/src/model/input_object_type/: bigint_comparison_exp.rs  can_aggregate_order_by.rs  can_arr_rel_insert_input.rs  can_avg_order_by.rs  can_bool_exp.rs  can_insert_input.rs  can_max_order_by.rs  can_min_order_by.rs  can_order_by.rs  can_stddev_order_by.rs  can_stddev_pop_order_by.rs  can_stddev_samp_order_by.rs  can_sum_order_by.rs  can_var_pop_order_by.rs  can_var_samp_order_by.rs  can_variance_order_by.rs  down_links_args.rs  exec_bool_exp_links_args.rs  jsonb_comparison_exp.rs  jwt_input.rs  links_aggregate_order_by.rs  links_arr_rel_insert_input.rs  links_avg_order_by.rs  links_bool_exp.rs  links_inc_input.rs  links_insert_input.rs  links_max_order_by.rs  links_min_order_by.rs  links_obj_rel_insert_input.rs  links_on_conflict.rs  links_order_by.rs  links_pk_columns_input.rs  links_set_input.rs  (+73 more)
(+733 files in other folders)
